# BlockWorks

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  litellm-config.example.yaml  litellm-config.yaml  pyproject.toml
.tracker/: board.md
.tracker/decisions/: ADR-001-phase0-architecture.md  ADR-002-wheres-waldo-data-analysis.md  ADR-003-phase1-architecture.md  ADR-004-attestation-protocol.md
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AgentProofAttestation.sol  AgentProofChannel.sol  AgentProofConsensus.sol  AgentProofRevenue.sol  AgentProofStaking.sol  AgentProofToken.sol  AgentProofTrust.sol
contracts/test/: AgentProofAttestation.t.sol  AgentProofChannel.t.sol  AgentProofConsensus.t.sol  AgentProofRevenue.t.sol  AgentProofStaking.t.sol  AgentProofToken.t.sol  AgentProofTrust.t.sol
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/: DEMO_GUIDE.md
docs/integrations/: claude-code.md  crewai.md  langchain.md  opencode.md
scripts/: demo_traffic.py  deploy-local.sh  run_benchmarks.py  seed_demo.py  validate-integration.sh  validate_fitness.py
scripts/fixtures/: real_benchmarks.json
sdk/typescript/: package.json  tsconfig.json
sdk/vscode/: package.json  tsconfig.json
src/agentproof/: __init__.py  config.py  models.py  types.py  utils.py
src/blockthrough/: __init__.py  config.py  models.py  types.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py  (+5 more)
(+755 files in other folders)
